auto-test/tests/chapter_18/invalid_parse/struct_member_storage_class.c
struct y {
    
    static int a;
};